// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioButton /> component should render a radio button checked 1`] = `
<input
  checked={true}
  class="crayons-radio"
  type="radio"
/>
`;

exports[`<RadioButton /> component should render a radio button unchecked by default 1`] = `
<input
  checked={false}
  class="crayons-radio"
  type="radio"
/>
`;

exports[`<RadioButton /> component should render a radio button with given props 1`] = `
<input
  checked={false}
  class="crayons-radio additional-css-class-name"
  id="some-id"
  name="some-name"
  onClick={[MockFunction]}
  type="radio"
  value="some-value"
/>
`;
